# loam-sdk

./: justfile
.cargo/: config.toml
.github/workflows/: cd.yml  npm.yml
crates/loam-cli/: CHANGELOG.md  Cargo.toml
crates/loam-cli/src/commands/: init.rs  mod.rs
crates/loam-cli/tests/fixtures/soroban-init-boilerplate/: README.md
crates/loam-cli/tests/fixtures/soroban-init-boilerplate/contracts/auth/: Cargo.toml
crates/loam-cli/tests/fixtures/soroban-init-boilerplate/contracts/custom_types/: Cargo.toml
crates/loam-cli/tests/it/: util.rs
crates/loam-cli/tests/it/build_clients/: accounts.rs  contracts.rs  manifest_path.rs  mod.rs  network.rs  no_environments.rs
crates/loam-sdk/: CHANGELOG.md  Cargo.toml
crates/loam-subcontract-core/: CHANGELOG.md
crates/loam-subcontract-ft/: CHANGELOG.md
npm/: .gitignore  package.json
npm/src/: getBinary.ts  index.ts
