[package]
name = "soroban-custom-types-contract"
edition = "2021"
version = "0.0.0"
publish = false
[dependencies.soroban-sdk]
workspace = true
[dev-dependencies.soroban-sdk]
features = ["testutils"]
workspace = true

[lib]
path = "src/lib.rs"
name = "soroban_custom_types_contract"
doctest = false
edition = "2021"
crate-type = ["rlib"]
required-features = []
